# cldbar

./: README.ko.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  profile.rs
src-tauri/src/providers/: claude.rs  claude_api.rs  gemini.rs  mod.rs  zai.rs  zai_api.rs
src/components/tray/: ActiveSessions.tsx  AddProfileForm.tsx  ProviderIcon.tsx  ProviderTabs.tsx  RateLimits.tsx  SettingsPanel.tsx  StatCards.tsx  TrayPopup.tsx  UsageMeter.tsx  WeeklySparkline.tsx
src/hooks/: useProviderData.ts
src/lib/: colors.ts  format.ts  theme.ts  types.ts  windowState.ts
src/styles/: globals.css
