[package]
name = "cldbar"
version = "0.1.0"
description = "AI Coding Monitor for Windows"
authors = ["cldbar contributors"]
edition = "2021"

[lib]
name = "cldbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
rusqlite = { version = "0.33", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
